--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -48,9 +48,11 @@
           Es gibt auch spezielle Unterscheidungszeichen für Organisationen und Behörden,
           z.B. "THW" für das "Technische Hilfswerk" oder "Y" für die Bundeswehr.
         </p>
-        <p>
-          Build-Zeitpunkt/Version der App: <ion-text>{{ZEITSTEMPEL_COMMIT}}</ion-text>
-        </p>
+
+        &nbsp;
+
+        <p>Build-Zeitpunkt/Version der App:</p>
+        <p><ion-text>{{ZEITSTEMPEL_COMMIT}}</ion-text></p>
       </ion-content>
     </ng-template>
   </ion-modal>
