home.page.html: trigger fuer Modal von "open-modal" auf "open-mein-modal" geaendert

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>KFZ-Kennzeichen nachschlagen</ion-title>
     <ion-buttons slot="secondary">
-      <ion-button fill="solid" icon-only id="open-modal" >
+      <ion-button fill="solid" icon-only id="open-mein-modal" >
         <ion-icon name="information-outline"></ion-icon><!-- Icon-Suche: https://ionic.io/ionicons -->
       </ion-button>
     </ion-buttons>
@@ -29,7 +29,7 @@
 
   <!-- Inline-Definition von "Modal"-View für Info-Button.
        Siehe auch: https://ionicframework.com/docs/api/modal -->
-  <ion-modal trigger="open-modal">
+  <ion-modal trigger="open-mein-modal">
     <ng-template>
       <ion-header>
         <ion-toolbar>
