Update auf neue Version von Ionic/Angular

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
                  [debounce]="500"
                  show-clear-button="always" />
   <!-- debounce: "entprellen"; Zeit in ms, um die das Feuern des
-       vents "onInput" verzögert wird. -->
+       Events "onInput" verzögert wird. -->
 
 
   <ion-list>
